--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -25,23 +25,21 @@
           </button>
         </div>
         
-	      <div class="visible-xs">
-	        <div id="collapsable-nav" class="collapse navbar-collapse">
-	          <ul id="nav-list" class="nav navbar-nav navbar-right">
-	            <li>
-	              <a href="#chicken" class="text-center"> Chicken</a>
-	            </li>
-	            <li>
-	              <a href="#beef" class="text-center">
-	                <br class="hidden-xs"> Beef</a>
-	            </li>
-	            <li>
-	              <a href="#sushi" class="text-center">
-	                <br class="hidden-xs"> Sushi</a>
-	            </li>
-	         	</ul><!-- #nav-list -->
-	        </div><!-- .collapse .navbar-collapse-->
-	      </div>
+	      <div id="collapsable-nav" class="collapse navbar-collapse">
+	        <ul id="nav-list" class="nav navbar-nav navbar-right">
+	          <li>
+	            <a href="#chicken" class="visible-xs text-center"> Chicken</a>
+	          </li>
+	          <li>
+	            <a href="#beef" class="visible-xs text-center">
+	              <br class="hidden-xs"> Beef</a>
+	          </li>
+	          <li>
+	            <a href="#sushi" class="visible-xs text-center">
+	              <br class="hidden-xs"> Sushi</a>
+	          </li>
+	        </ul><!-- #nav-list -->
+	      </div><!-- .collapse .navbar-collapse-->
       </div><!-- .container -->
     </nav><!-- #header-nav -->
   </header>
